# ir-cli-utility

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  run.ps1  run.sh
.github/workflows/: release.yml
docs/: ir.1
src/: base64.rs  dns.rs  echo.rs  encode.rs  env_action.rs  fetch.rs  hash.rs  help.rs  hex.rs  json.rs  lib.rs  log_parser.rs  mac.rs  main.rs  math.rs  plot.rs  portscan.rs  serve.rs  sleep.rs  text.rs  time.rs  tui_util.rs  uuid.rs
src/anispeak/: mod.rs
src/archive/: linux.rs  mod.rs  windows.rs
src/browse/: mod.rs
src/cat/: linux.rs  mod.rs  windows.rs
src/chmod/: linux.rs  mod.rs  unix.rs  windows.rs
src/clip/: linux.rs  mod.rs  windows.rs
src/clock/: mod.rs
src/copy/: linux.rs  mod.rs  windows.rs
src/create/: linux.rs  mod.rs  windows.rs
src/dbview/: mod.rs
src/df/: linux.rs  mod.rs  windows.rs
src/diff/: mod.rs
src/du/: linux.rs  mod.rs
src/dua/: mod.rs
src/edit/: mod.rs
src/envv/: mod.rs
src/fastfetch/: linux.rs  mod.rs  windows.rs
src/find/: mod.rs
src/fm/: mod.rs
src/gitinfo/: mod.rs
src/gitv/: mod.rs
src/globe/: mod.rs
src/grep/: mod.rs  windows.rs
src/head/: mod.rs
src/hexview/: mod.rs
src/ip/: linux.rs  mod.rs  windows.rs
src/kill/: linux.rs  mod.rs  windows.rs
src/life/: mod.rs
src/list/: linux.rs  mod.rs  windows.rs
src/ln/: linux.rs  mod.rs  windows.rs
src/matrix/: mod.rs
src/monitor/: mod.rs
src/move/: linux.rs  mod.rs  windows.rs
src/nettop/: linux.rs  mod.rs  windows.rs
src/path/: linux.rs  mod.rs  windows.rs
src/ping/: linux.rs  mod.rs  windows.rs
src/pmon/: linux.rs  mod.rs  windows.rs
src/ps/: linux.rs  mod.rs  windows.rs
src/remove/: linux.rs  mod.rs  windows.rs
src/rename/: linux.rs  mod.rs  windows.rs
src/request/: mod.rs
src/scrape/: mod.rs
src/search/: mod.rs
src/sockets/: linux.rs  mod.rs  windows.rs
src/sort/: mod.rs
src/stat/: mod.rs
src/sysinfo/: mod.rs
src/tail/: mod.rs
src/tee/: mod.rs
src/tree/: linux.rs  mod.rs  windows.rs
src/watch/: mod.rs
src/wc/: mod.rs
src/which/: mod.rs
src/whoami/: linux.rs  mod.rs  windows.rs
tests/aliases/: 01_aliases.ps1  01_aliases.sh
tests/anispeak/: 01_anispeak_basic.ps1  01_anispeak_basic.sh  02_anispeak_expansion.ps1  02_anispeak_expansion.sh
tests/archive/: 01_create_zip_file.ps1  01_create_zip_file.sh  02_unarc_zip.ps1  02_unarc_zip.sh  create_zip.rs
tests/base64/: 01_base64_basic.ps1  01_base64_basic.sh
tests/browse/: 01_browse_help.ps1  01_browse_help.sh
tests/cat/: 01_basic_cat.ps1  01_basic_cat.sh  02_line_numbers.ps1  02_line_numbers.sh  03_selectors.ps1  03_selectors.sh  04_binary.ps1  04_binary.sh  05_squeeze_blank.ps1
tests/chmod/: 01_chmod_basic.ps1  (+3 more)
(+172 files in other folders)
