[package]
name = "ir-cli-utility"
version = "0.1.0"
edition = "2021"

[lib]
name = "ir_cli_utility"
path = "src/lib.rs"

[[bin]]
name = "ir"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sevenz-rust = "0.4"
iso9660 = "0.1.1" # Corrected version
walkdir = "2"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
ureq = "2.9"
base64 = "0.22"
getrandom = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
